NewArchive/d1a8e820a78873258d2e3255152a604a-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:11:10: error: invalid initialization of reference of type ‘int&’ from expression of type ‘short int’
     foo(s); // error
          ^
main.cpp:2:6: error: in passing argument 1 of ‘void foo(int&)’
 void foo(int&) {}
      ^
